--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url(../img/3777.jpg);
+    background-image: url(./3777.jpg);
     background-position: absolute;
     background-repeat: no-repeat;
     background-size: cover;
